package com.gb.rental.model.common;

public enum NotificationStatus {
    SENT,
    PENDING,
    RETRIED,
    FAILED
}
