package com.gb.rental.model.reservation;

public class Chauffeur extends AddonService {
    @Override
    public double getCost() {
        return 250;
    }
}
