package com.gb.rental.model.reservation;

public class ChildSeat extends VehicleAddon {
    @Override
    public double getCost() {
        return 150;
    }
}
