package com.gb.rental.model.reservation;

public class DeepCleaning extends AddonService {

    @Override
    public double getCost() {
        return 300;
    }
}
