package com.gb.rental.model.reservation;

public class Insurance extends AddonService {

    @Override
    public double getCost() {
        return 300;
    }
}
