package com.gb.rental.model.reservation;

public class Navigation extends VehicleAddon {

    @Override
    public double getCost() {
        return 500;
    }
}
