package com.gb.rental.model.reservation;

public class OnDemandTowing extends AddonService {


    @Override
    public double getCost() {
        return 200;
    }
}
