package com.gb.rental.model.reservation;

public class PassengerScreen extends VehicleAddon {

    @Override
    public double getCost() {
        return 100;
    }
}
