package com.gb.rental.model.reservation;

public class WiFi extends AddonService {
}
